# Model-View-Delegate

./: .gitignore  Main.qml  README.md
00 - Initial Project/: CMakeLists.txt  LiveLocationModel.qml  LiveWeatherModel.qml  Main.qml  OpenMeteo.qml  Requester.qml  main.cpp
00_InitialProject/: CMakeLists.txt  Main.qml  main.cpp
00_InitialProject/assets/images/: attributions.md
01 - Models/b - Array Model/: Main.qml
01 - Models/c - Object Model/: Main.qml
01_Models/c_ObjectModel/: Main.qml
02 - Built-in Models/a - FolderListModel and GridView/: Main.qml
02 - Built-in Models/b - ListModel and ListView/: Main.qml
03 - ComboBox/: Main.qml
04 - Live Weather Data/a - Live Location Model/: Main.qml
04 - Live Weather Data/b - Live Weather Model/: Main.qml
04 - Live Weather Data/c - Current Weather/: Main.qml
